# ai-native-tasks-manager

./: .mcp.json  AGENTS.md  README.md  skills-lock.json
.claude/skills/service-bootstrap/: SKILL.md
.claude/skills/service-bootstrap/assets/: workflow.yml.template
.github/workflows/: tasks-agent.yml  tasks-mcp.yml
deployments/: README.md
deployments/tasks-agent/: configmap.yaml  deployment.yaml  secret.example.yaml  service.yaml
deployments/tasks-mcp/: configmap.yaml  deployment.yaml  service.yaml
services/tasks-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
services/tasks-agent/src/tasks_agent/: __init__.py  agent.py  api.py  cli.py
services/tasks-agent/tests/unit/: test_session.py
services/tasks-mcp/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
services/tasks-mcp/scripts/: smoke.py
services/tasks-mcp/src/tasks_mcp/: __init__.py  errors.py  models.py  server.py  store.py  time_utils.py  tools.py
services/tasks-mcp/tests/e2e/: test_live_server.py
services/tasks-mcp/tests/integration/: test_mcp_protocol.py
services/tasks-mcp/tests/unit/: test_errors.py  test_models.py  test_store.py  test_time_utils.py  test_tools_capture.py  test_tools_modify.py  test_tools_remove.py  test_tools_resolve.py  test_tools_review.py
specs/mcp-server/: decisions.md  implementation-plan.md  tasks-server-tools.md
specs/tasks-agent/: decisions.md  sdk-study.md
