[project]
name = "tasks-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Junaid Shaukat", email = "mr.junaidshaukat@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "openai-agents[litellm]>=0.15.1",
    "python-dotenv>=1.2.2",
]

[project.scripts]
tasks-agent = "tasks_agent:main"

[tool.fastapi]
entrypoint = "tasks_agent.api:app"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
