[project]
name = "tasks-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Junaid Shaukat", email = "mr.junaidshaukat@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp==1.27.0",
    "pydantic>=2",
    "python-ulid>=3.1.0",
]

[project.scripts]
tasks-mcp = "tasks_mcp:main"

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
